# Islamic_research_agent

./: .env  .gitignore  README.md  agent_core.py  agent_setup.py  chainlit.md  main.py  push_vercel_env.py  pyproject.toml  render.yaml  requirements.txt  server.py  test_agent.py  vercel.json  weather_agent_example.py
.chainlit/: config.toml
public/: custom.css  custom.js  index.html
