[project]
name = "islamic-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.80.0",
    "openai-agents>=0.0.20",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]
